@@ -32,155 +32,155 @@
 #import <GNUstepBase/GSVersionMacros.h>
 
 /* Define library version */
-#include <GNUstepGUI/GSVersion.h>
+#import <GNUstepGUI/GSVersion.h>
 
 //
 // Foundation
 //
-#include <Foundation/Foundation.h>
+#import <Foundation/Foundation.h>
 
 //
 // GNUstep GUI Library functions
 //
-#include <AppKit/NSGraphics.h>
+#import <AppKit/NSGraphics.h>
 
-#include <AppKit/NSActionCell.h>
-#include <AppKit/NSApplication.h>
-#include <AppKit/NSAttributedString.h>
-#include <AppKit/NSBitmapImageRep.h>
-#include <AppKit/NSBox.h>
-#include <AppKit/NSBrowser.h>
-#include <AppKit/NSBrowserCell.h>
-#include <AppKit/NSButton.h>
-#include <AppKit/NSButtonCell.h>
-#include <AppKit/NSCachedImageRep.h>
-#include <AppKit/NSCell.h>
-#include <AppKit/NSClipView.h>
-#include <AppKit/NSColor.h>
-#include <AppKit/NSColorList.h>
-#include <AppKit/NSColorPanel.h>
-#include <AppKit/NSColorPicker.h>
-#include <AppKit/NSColorPicking.h>
-#include <AppKit/NSColorWell.h>
-#include <AppKit/NSControl.h>
-#include <AppKit/NSCursor.h>
-#include <AppKit/NSCustomImageRep.h>
-#include <AppKit/NSDataLink.h>
-#include <AppKit/NSDataLinkManager.h>
-#include <AppKit/NSDataLinkPanel.h>
-#include <AppKit/NSDragging.h>
-#include <AppKit/NSEPSImageRep.h>
-#include <AppKit/NSEvent.h>
-#include <AppKit/NSFont.h>
-#include <AppKit/NSFontManager.h>
-#include <AppKit/NSFontPanel.h>
-#include <AppKit/NSForm.h>
-#include <AppKit/NSFormCell.h>
-#include <AppKit/NSHelpPanel.h>
-#include <AppKit/NSImage.h>
-#include <AppKit/NSImageCell.h>
-#include <AppKit/NSImageRep.h>
-#include <AppKit/NSImageView.h>
-#include <AppKit/NSMatrix.h>
-#include <AppKit/NSMenu.h>
-#include <AppKit/NSMenuItem.h>
-#include <AppKit/NSMenuItemCell.h>
-#include <AppKit/NSMenuView.h>
-#include <AppKit/NSNibLoading.h>
-#include <AppKit/NSOpenPanel.h>
-#include <AppKit/NSPageLayout.h>
-#include <AppKit/NSPanel.h>
-#include <AppKit/NSPasteboard.h>
-#include <AppKit/NSPopUpButton.h>
-#include <AppKit/NSPopUpButtonCell.h>
-#include <AppKit/NSPrinter.h>
-#include <AppKit/NSPrintInfo.h>
-#include <AppKit/NSPrintOperation.h>
-#include <AppKit/NSPrintPanel.h>
-#include <AppKit/NSResponder.h>
-#include <AppKit/NSSavePanel.h>
-#include <AppKit/NSScreen.h>
-#include <AppKit/NSScroller.h>
-#include <AppKit/NSScrollView.h>
-#include <AppKit/NSSelection.h>
-#include <AppKit/NSSlider.h>
-#include <AppKit/NSSliderCell.h>
-#include <AppKit/NSSpellChecker.h>
-#include <AppKit/NSSpellProtocol.h>
-#include <AppKit/NSSplitView.h>
-#include <AppKit/NSStringDrawing.h>
-#include <AppKit/NSText.h>
-#include <AppKit/NSTextField.h>
-#include <AppKit/NSTextFieldCell.h>
-#include <AppKit/NSView.h>
-#include <AppKit/NSWindow.h>
-#include <AppKit/NSWorkspace.h>
+#import <AppKit/NSActionCell.h>
+#import <AppKit/NSApplication.h>
+#import <AppKit/NSAttributedString.h>
+#import <AppKit/NSBitmapImageRep.h>
+#import <AppKit/NSBox.h>
+#import <AppKit/NSBrowser.h>
+#import <AppKit/NSBrowserCell.h>
+#import <AppKit/NSButton.h>
+#import <AppKit/NSButtonCell.h>
+#import <AppKit/NSCachedImageRep.h>
+#import <AppKit/NSCell.h>
+#import <AppKit/NSClipView.h>
+#import <AppKit/NSColor.h>
+#import <AppKit/NSColorList.h>
+#import <AppKit/NSColorPanel.h>
+#import <AppKit/NSColorPicker.h>
+#import <AppKit/NSColorPicking.h>
+#import <AppKit/NSColorWell.h>
+#import <AppKit/NSControl.h>
+#import <AppKit/NSCursor.h>
+#import <AppKit/NSCustomImageRep.h>
+#import <AppKit/NSDataLink.h>
+#import <AppKit/NSDataLinkManager.h>
+#import <AppKit/NSDataLinkPanel.h>
+#import <AppKit/NSDragging.h>
+#import <AppKit/NSEPSImageRep.h>
+#import <AppKit/NSEvent.h>
+#import <AppKit/NSFont.h>
+#import <AppKit/NSFontManager.h>
+#import <AppKit/NSFontPanel.h>
+#import <AppKit/NSForm.h>
+#import <AppKit/NSFormCell.h>
+#import <AppKit/NSHelpPanel.h>
+#import <AppKit/NSImage.h>
+#import <AppKit/NSImageCell.h>
+#import <AppKit/NSImageRep.h>
+#import <AppKit/NSImageView.h>
+#import <AppKit/NSMatrix.h>
+#import <AppKit/NSMenu.h>
+#import <AppKit/NSMenuItem.h>
+#import <AppKit/NSMenuItemCell.h>
+#import <AppKit/NSMenuView.h>
+#import <AppKit/NSNibLoading.h>
+#import <AppKit/NSOpenPanel.h>
+#import <AppKit/NSPageLayout.h>
+#import <AppKit/NSPanel.h>
+#import <AppKit/NSPasteboard.h>
+#import <AppKit/NSPopUpButton.h>
+#import <AppKit/NSPopUpButtonCell.h>
+#import <AppKit/NSPrinter.h>
+#import <AppKit/NSPrintInfo.h>
+#import <AppKit/NSPrintOperation.h>
+#import <AppKit/NSPrintPanel.h>
+#import <AppKit/NSResponder.h>
+#import <AppKit/NSSavePanel.h>
+#import <AppKit/NSScreen.h>
+#import <AppKit/NSScroller.h>
+#import <AppKit/NSScrollView.h>
+#import <AppKit/NSSelection.h>
+#import <AppKit/NSSlider.h>
+#import <AppKit/NSSliderCell.h>
+#import <AppKit/NSSpellChecker.h>
+#import <AppKit/NSSpellProtocol.h>
+#import <AppKit/NSSplitView.h>
+#import <AppKit/NSStringDrawing.h>
+#import <AppKit/NSText.h>
+#import <AppKit/NSTextField.h>
+#import <AppKit/NSTextFieldCell.h>
+#import <AppKit/NSView.h>
+#import <AppKit/NSWindow.h>
+#import <AppKit/NSWorkspace.h>
 
 #if OS_API_VERSION(GS_API_MACOSX, GS_API_LATEST)
-#include <AppKit/NSAlert.h>
-#include <AppKit/NSAnimation.h>
-#include <AppKit/NSAffineTransform.h>
-#include <AppKit/NSArrayController.h>
-#include <AppKit/NSBezierPath.h>
-#include <AppKit/NSComboBox.h>
-#include <AppKit/NSComboBoxCell.h>
-#include <AppKit/NSController.h>
-#include <AppKit/NSDocument.h>
-#include <AppKit/NSDocumentController.h>
-#include <AppKit/NSDrawer.h>
-#include <AppKit/NSFileWrapper.h>
-#include <AppKit/NSFontDescriptor.h>
-#include <AppKit/NSGradient.h>
-#include <AppKit/NSGraphicsContext.h>
-#include <AppKit/NSHelpManager.h>
-#include <AppKit/NSInputManager.h>
-#include <AppKit/NSInputServer.h>
-#include <AppKit/NSInterfaceStyle.h>
-#include <AppKit/NSKeyValueBinding.h>
-#include <AppKit/NSLayoutManager.h>
-#include <AppKit/NSLevelIndicator.h>
-#include <AppKit/NSLevelIndicatorCell.h>
-#include <AppKit/NSMovie.h>
-#include <AppKit/NSMovieView.h>
-#include <AppKit/NSNib.h>
-#include <AppKit/NSNibDeclarations.h>
-#include <AppKit/NSObjectController.h>
-#include <AppKit/NSOpenGL.h>
-#include <AppKit/NSOpenGLView.h>
-#include <AppKit/NSOutlineView.h>
-#include <AppKit/NSParagraphStyle.h>
-#include <AppKit/NSProgressIndicator.h>
-#include <AppKit/NSRulerMarker.h>
-#include <AppKit/NSRulerView.h>
-#include <AppKit/NSSearchField.h>
-#include <AppKit/NSSearchFieldCell.h>
-#include <AppKit/NSSecureTextField.h>
-#include <AppKit/NSSegmentedCell.h>
-#include <AppKit/NSSegmentedControl.h>
-#include <AppKit/NSShadow.h>
-#include <AppKit/NSSound.h>
-#include <AppKit/NSSpeechSynthesizer.h>
-#include <AppKit/NSStepper.h>
-#include <AppKit/NSStepperCell.h>
-#include <AppKit/NSTableColumn.h>
-#include <AppKit/NSTableHeaderCell.h>
-#include <AppKit/NSTableHeaderView.h>
-#include <AppKit/NSTableView.h>
-#include <AppKit/NSTabView.h>
-#include <AppKit/NSTabViewItem.h>
-#include <AppKit/NSTextAttachment.h>
-#include <AppKit/NSTextContainer.h>
-#include <AppKit/NSTextList.h>
-#include <AppKit/NSTextStorage.h>
-#include <AppKit/NSTextTable.h>
-#include <AppKit/NSTextView.h>
-#include <AppKit/NSToolbar.h>
-#include <AppKit/NSToolbarItem.h>
-#include <AppKit/NSUserDefaultsController.h>
-#include <AppKit/NSUserInterfaceValidation.h>
-#include <AppKit/NSWindowController.h>
+#import <AppKit/NSAlert.h>
+#import <AppKit/NSAnimation.h>
+#import <AppKit/NSAffineTransform.h>
+#import <AppKit/NSArrayController.h>
+#import <AppKit/NSBezierPath.h>
+#import <AppKit/NSComboBox.h>
+#import <AppKit/NSComboBoxCell.h>
+#import <AppKit/NSController.h>
+#import <AppKit/NSDocument.h>
+#import <AppKit/NSDocumentController.h>
+#import <AppKit/NSDrawer.h>
+#import <AppKit/NSFileWrapper.h>
+#import <AppKit/NSFontDescriptor.h>
+#import <AppKit/NSGradient.h>
+#import <AppKit/NSGraphicsContext.h>
+#import <AppKit/NSHelpManager.h>
+#import <AppKit/NSInputManager.h>
+#import <AppKit/NSInputServer.h>
+#import <AppKit/NSInterfaceStyle.h>
+#import <AppKit/NSKeyValueBinding.h>
+#import <AppKit/NSLayoutManager.h>
+#import <AppKit/NSLevelIndicator.h>
+#import <AppKit/NSLevelIndicatorCell.h>
+#import <AppKit/NSMovie.h>
+#import <AppKit/NSMovieView.h>
+#import <AppKit/NSNib.h>
+#import <AppKit/NSNibDeclarations.h>
+#import <AppKit/NSObjectController.h>
+#import <AppKit/NSOpenGL.h>
+#import <AppKit/NSOpenGLView.h>
+#import <AppKit/NSOutlineView.h>
+#import <AppKit/NSParagraphStyle.h>
+#import <AppKit/NSProgressIndicator.h>
+#import <AppKit/NSRulerMarker.h>
+#import <AppKit/NSRulerView.h>
+#import <AppKit/NSSearchField.h>
+#import <AppKit/NSSearchFieldCell.h>
+#import <AppKit/NSSecureTextField.h>
+#import <AppKit/NSSegmentedCell.h>
+#import <AppKit/NSSegmentedControl.h>
+#import <AppKit/NSShadow.h>
+#import <AppKit/NSSound.h>
+#import <AppKit/NSSpeechSynthesizer.h>
+#import <AppKit/NSStepper.h>
+#import <AppKit/NSStepperCell.h>
+#import <AppKit/NSTableColumn.h>
+#import <AppKit/NSTableHeaderCell.h>
+#import <AppKit/NSTableHeaderView.h>
+#import <AppKit/NSTableView.h>
+#import <AppKit/NSTabView.h>
+#import <AppKit/NSTabViewItem.h>
+#import <AppKit/NSTextAttachment.h>
+#import <AppKit/NSTextContainer.h>
+#import <AppKit/NSTextList.h>
+#import <AppKit/NSTextStorage.h>
+#import <AppKit/NSTextTable.h>
+#import <AppKit/NSTextView.h>
+#import <AppKit/NSToolbar.h>
+#import <AppKit/NSToolbarItem.h>
+#import <AppKit/NSUserDefaultsController.h>
+#import <AppKit/NSUserInterfaceValidation.h>
+#import <AppKit/NSWindowController.h>
 #endif
 
-#include <AppKit/PSOperators.h>
+#import <AppKit/PSOperators.h>
 
 #endif /* _GNUstep_H_AppKit */
