@@ -30,7 +30,7 @@
    Boston, MA 02110-1301, USA.
 */
 
-#include "config.h"
+#import "config.h"
 #include <math.h>
 
 #import <Foundation/NSArray.h>
