@@ -1,3 +1,14 @@
+2010-03-04 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/AppKit/AppKit.h,
+	* Headers/AppKit/NSAlert.h,
+	* Headers/AppKit/NSActionCell.h,
+	* Headers/AppKit/NSCell.h,
+	* Source/NSAlert.m,
+	* Source/NSAffineTransform.m,
+	* Source/NSCell.m: Clean up includes.
+	* Source/NSActionCell.m: Add method integerValue.
+
 2010-02-27 23:32-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/Additions/GNUstepGUI/GSTheme.h: Add category to allow
